--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "ytlegends",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1",
-    "request": "^2.88.0",
-    "xml-js": "^1.6.11",
-    "ytdl-core": "^1.0.0"
-  },
-	"scripts":{
-	 "start":"node ."
-	}
+ "name": "ytlegends",
+ "version": "1.0.0",
+ "main": "index.js",
+ "license": "MIT",
+ "dependencies": {
+  "express": "^4.17.1",
+  "request": "^2.88.0",
+  "xml-js": "^1.6.11",
+  "ytdl-core": "^1.0.0"
+ },
+ "scripts": {
+  "start": "node .",
+  "dev": "nodemon"
+ },
+ "devDependencies": {
+  "nodemon": "^2.0.2"
+ }
 }
